--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sass": "^1.51.0",
+    "skeleton-loader-vue": "^1.0.10",
     "vue": "^2.6.14",
+    "vue-loading-skeleton": "^1.1.9",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2",
-    "sass": "^1.51.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
