--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "skeleton-loader-vue": "^1.0.10",
     "vue": "^2.6.14",
     "vue-loading-skeleton": "^1.1.9",
+    "vue-meta": "^2.4.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
